--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <h1>Home Page</h1>
+    <main class="container apartments">
+        <section class="grid">
+            <%for ( const apartment of apartments) { %>
+                <article class="card apartment">
+                    <h1>
+                        <%= apartment.title %>
+                    </h1>
+                    <img src="<%= apartment.mainPhoto %>" alt="<%= apartment.title %>">
+                    <p>
+                        <%= apartment.price %> por noche
+                    </p>
+                    </footer>
+                </article>
+            <% } %>
+        </section>
+    </main>
 </body>
 
 </html>
