--- a/views/new-apartment.ejs
+++ b/views/new-apartment.ejs
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <!-- 1er paso para añadir apartamento una vez creado el modelo, y las rutas get de admin y user al home -->
     <h1>Add New Apartment</h1>
-    <main class="container">
+    <form class="container" action="/admin/apartment/new-apartment" method="POST">
         <label for="title">Título</label>
         <input type="text" name="title" id="title" required maxlength="30">
         <label for="price">Precio por noche</label>
@@ -19,7 +20,8 @@
         <input type="number" name="size" id="size" required min="0">
         <label for="mainPhoto">Foto principal</label>
         <input type="url" name="mainPhoto" id="mainPhoto">
-    </main>
+        <input type="submit" value="Añadir">
+    </form>
 </body>
 
 </html>
