Fixing some comments to understand better the mvc arquitecture

--- a/views/new-apartment.ejs
+++ b/views/new-apartment.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- 1er paso para añadir apartamento una vez creado el modelo, y las rutas get de admin y user al home -->
+    <!-- 1er Paso para añadir apartamento una vez creado el modelo, y las rutas get de admin y user al home -->
     <h1>Add New Apartment</h1>
     <form class="container" action="/admin/apartment/new-apartment" method="POST">
         <label for="title">Título</label>
