--- a/views/new-apartment.ejs
+++ b/views/new-apartment.ejs
@@ -14,12 +14,30 @@
     <form class="container" action="/admin/apartment/new-apartment" method="POST">
         <label for="title">Título</label>
         <input type="text" name="title" id="title" required maxlength="30">
+        <label for="description">Descripción</label>
+        <textarea rows="5" name="description" id="description" required></textarea>
         <label for="price">Precio por noche</label>
         <input type="number" name="price" id="price" required min="0">
         <label for="size">M <sup>2</sup></label>
         <input type="number" name="size" id="size" required min="0">
         <label for="mainPhoto">Foto principal</label>
         <input type="url" name="mainPhoto" id="mainPhoto">
+        <fieldset class="services-container">
+            <legend>Servicios</legend>
+            <div>
+                <label>
+                    <input type="checkbox" name="wifi" value="true">
+                    Wi-Fi gratuito
+                </label>
+            </div>
+            <div>
+                <label>
+                    <input type="checkbox" name="airConditioner" value="true">
+                    Aire acondicionado
+                </label>
+            </div>
+        </fieldset>
+        
         <input type="submit" value="Añadir">
     </form>
 </body>
