--- a/views/detail-apartment.ejs
+++ b/views/detail-apartment.ejs
@@ -11,7 +11,7 @@
     <main class="container apartments">
         <h1><%= selectedApartment.title %></h1>
         <img src="<%= selectedApartment.mainPhoto %>" alt="<%= selectedApartment.title %>">
-        <p><b>Precio:</b> <%= selectedApartment.price %> € por noche</p>
+        <p><b>Precio:</b> <del style="color: #999999"><%= selectedApartment.price %></del> <%= selectedApartment.price*0.9 %> € por noche</p>
         <p><b>Descripción:</b> <%= selectedApartment.description %></p>
         <p><b>Metros de superficie:</b> <%= selectedApartment.size %> m<sup>2</sup></p>
         <div>
