--- a/public/styles.css
+++ b/public/styles.css
@@ -40,12 +40,20 @@
     align-items: center;
 }
 
-.image-container img {
-    width: 300px; 
-    height: 350px;
+.image-card-home {
+    width: 350px; 
+    height: 200px;
     object-fit: cover; /* Imagen ocupa el area disponible sin distorsionarse */
     display: block; /* Es tratada como un elemento de bloque */
     margin: 0 auto; /* Para centrar la imagen en la card */
+}
+
+.image-detail {
+    width: 100%; 
+    height:450px;
+    object-fit: cover; /* Imagen ocupa el area disponible sin distorsionarse */
+    display: block; /* Es tratada como un elemento de bloque */
+  
 }
 
 .color-box {
