--- a/views/detail-apartment.ejs
+++ b/views/detail-apartment.ejs
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribook</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Detail Apartment Page</h1>
     <main class="container apartments">
         <h1><%= selectedApartment.title %></h1>
-        <img src="<%= selectedApartment.mainPhoto %>" alt="<%= selectedApartment.title %>">
+        <img class="image-detail" src="<%= selectedApartment.mainPhoto %>" alt="<%= selectedApartment.title %>">
         <p><b>Precio:</b> <del style="color: #999999"><%= selectedApartment.price %></del> <%= selectedApartment.price*0.9 %> € por noche</p>
         <p><b>Descripción:</b> <%= selectedApartment.description %></p>
         <p><b>Metros de superficie:</b> <%= selectedApartment.size %> m<sup>2</sup></p>
