--- a/views/new-apartment.ejs
+++ b/views/new-apartment.ejs
@@ -14,6 +14,8 @@
     <form class="container" action="/admin/apartment/new-apartment" method="POST">
         <label for="title">Título</label>
         <input type="text" name="title" id="title" required maxlength="30">
+        <label for="location">Ciudad - Población</label>
+            <input type="text" name="location" id="location" required maxlength="30">
         <label for="description">Descripción</label>
         <textarea rows="5" name="description" id="description" required></textarea>
         <label for="price">Precio por noche</label>
