--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,6 +26,12 @@
                 <option value="three-persons" name="three-persons-capacity">3 personas</option>
                 <option value="four-persons" name="four-persons-capacity">4 personas</option>
             </select>
+            <fieldset>
+                <label for="startDate">Fecha de Inicio:</label>
+                <input type="date" id="startDate" name="startDate" required>
+                <label for="endDate">Fecha de Fin:</label>
+                <input type="date" id="endDate" name="endDate" required>
+            </fieldset>
     
             <input type="submit" value="Filtrar">
         </form>
