--- a/views/detail-apartment.ejs
+++ b/views/detail-apartment.ejs
@@ -25,5 +25,13 @@
             </ul>
         </div>
     </main>
+    <footer>
+        Soy administrador? <%= isAdmin %>
+        <% if (isAdmin) { %>
+            <a href="/admin/apartment/<%= selectedApartment._id %>/edit/">Editar apartamento</a>
+        <% } else { %>
+            <p>Mostrar botón de reservar con sus campos de fecha de inicio...fecha de fin, etc.</p>
+        <% } %>
+    </footer>
 </body>
 </html>
