--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,23 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribook</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css" >
-    <link rel="stylesheet" href="/styles.css">
+    <%- include('./partials/head.ejs') %>
 </head>
 
 <body>
+    <header class="container-fluid">
+        <%- include('./partials/header.ejs') %>
+    </header>
     <h1>Home Page</h1>
-    <p> <a href="/admin/apartment/new-apartment">Añadir nuevo apartamento</a>
-    </p>
-    <% if (isAdmin) { %>
-        <p><a class="button-logout" href="/logout">Logout</a></p>
-    <% } else { %>
-        <p><a class="button-logout" href="/login">Login</a></p>
-    <% } %>
     <header>
         <h3 class="pico-color-azure-500">Opciones de filtrado</h3>
         <form action="/search" method="GET">
