--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,30 +10,40 @@
     <header class="container-fluid">
         <%- include('./partials/header.ejs') %>
     </header>
-    <h1>Home Page</h1>
-    <header>
-        <h3 class="pico-color-azure-500">Opciones de filtrado</h3>
-        <form action="/search" method="GET">
-            <label for="location">Ciudad - Población</label>
-            <input type="text" name="city" id="city" required maxlength="30">
-            <label for="max-price">Precio máximo por noche</label>
-            <input type="number" name="max-price" id="max-price" required min="0">
-            <label for="capacity">Capacidad</label>
-            <select name="capacity" id="capacity">
-                <option value="one-person" name="one-person-capacity">1 persona</option>
-                <option value="two-persons" name="two-persons-capacity">2 personas</option>
-                <option value="three-persons" name="three-persons-capacity">3 personas</option>
-                <option value="four-persons" name="four-persons-capacity">4 personas</option>
-            </select>
-            <fieldset>
-                <label for="startDate">Fecha de Inicio:</label>
-                <input type="date" id="startDate" name="startDate" required>
-                <label for="endDate">Fecha de Fin:</label>
-                <input type="date" id="endDate" name="endDate" required>
-            </fieldset>
-            <input type="submit" value="Filtrar">
-        </form>
-    </header>
+    <section class="w3-display-container w3-content" style="max-width:1500px;">
+        <img class="image-detail" src="https://images.pexels.com/photos/1134176/pexels-photo-1134176.jpeg" alt="The Hotel" >
+    </section>
+    <form class="w3-row-padding" action="/search" method="GET">
+            <div class="w3-col m2">
+                <label for="city"><i class="fa-location-dot"></i> Ciudad</label>
+                <input class="w3-input w3-border" type="text" placeholder="Ciudad" name="city" id="city" required maxlength="30">
+              </div>
+              <div class="w3-col m2">
+                <label for="startDate"><i class="fa fa-calendar-o"></i> Fecha inicio</label>
+                <input class="w3-input w3-border" type="date" id="startDate" name="startDate" required>
+              </div>
+              <div class="w3-col m2">
+                <label for="endDate"><i class="fa fa-calendar-o"></i> Fecha fin</label>
+                <input class="w3-input w3-border" type="date" id="endDate" name="endDate" required>
+              </div>
+              <div class="w3-col m2">
+                <label for="capacity"><i class="fa fa-male"></i> Personas</label>
+                <select class="w4-input w3-border" name="capacity" id="capacity">
+                    <option value="one-person" name="one-person-capacity">1 persona</option>
+                    <option value="two-persons" name="two-persons-capacity">2 personas</option>
+                    <option value="three-persons" name="three-persons-capacity">3 personas</option>
+                    <option value="four-persons" name="four-persons-capacity">4 personas</option>
+                </select>
+              </div>
+              <div class="w3-col m2">
+                  <label for="max-price"><i class="fa fa-male"></i> Precio noche</label>
+                  <input class="w3-input w3-border" type="number" placeholder="1" name="max-price" id="max-price" required min="0">
+              </div>
+              <div class="w3-col m2">
+                <label><i class="fa fa-search"></i> Búsqueda</label>
+                <input class="w3-button w3-block w3-black" type="submit" value="Buscar">
+              </div>
+    </form>
     <main class="container apartments">
         <section class="grid">
             <%for ( const apartment of apartments) { %>
@@ -56,6 +66,155 @@
             </footer>
         </section>
     </main>
+    <style>
+        body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
+        .myLink {display: none}
+        </style>
+        </head>
+        <body class="w3-light-grey">
+        
+       
+        
+        <!-- Header -->
+        <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
+          <img class="w3-image" src="/w3images/london2.jpg" alt="London" width="1500" height="700">
+        </header>
+        
+        <!-- Page content -->
+        <div class="w3-content" style="max-width:1100px;">
+        
+          <!-- Good offers -->
+          <div class="w3-container w3-margin-top">
+            <h3>Good Offers Right Now</h3>
+            <h6>Up to <strong>50%</strong> discount.</h6>
+          </div>
+          <div class="w3-row-padding w3-text-white w3-large">
+            <div class="w3-half w3-margin-bottom">
+              <div class="w3-display-container">
+                <img src="/w3images/cinqueterre.jpg" alt="Cinque Terre" style="width:100%">
+                <span class="w3-display-bottomleft w3-padding">Cinque Terre</span>
+              </div>
+            </div>
+            <div class="w3-half">
+              <div class="w3-row-padding" style="margin:0 -16px">
+                <div class="w3-half w3-margin-bottom">
+                  <div class="w3-display-container">
+                    <img src="/w3images/newyork2.jpg" alt="New York" style="width:100%">
+                    <span class="w3-display-bottomleft w3-padding">New York</span>
+                  </div>
+                </div>
+                <div class="w3-half w3-margin-bottom">
+                  <div class="w3-display-container">
+                    <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%">
+                    <span class="w3-display-bottomleft w3-padding">San Francisco</span>
+                  </div>
+                </div>
+              </div>
+              <div class="w3-row-padding" style="margin:0 -16px">
+                <div class="w3-half w3-margin-bottom">
+                  <div class="w3-display-container">
+                    <img src="/w3images/pisa.jpg" alt="Pisa" style="width:100%">
+                    <span class="w3-display-bottomleft w3-padding">Pisa</span>
+                  </div>
+                </div>
+                <div class="w3-half w3-margin-bottom">
+                  <div class="w3-display-container">
+                    <img src="/w3images/paris.jpg" alt="Paris" style="width:100%">
+                    <span class="w3-display-bottomleft w3-padding">Paris</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+          <!-- Explore Nature -->
+          <div class="w3-container">
+            <h3>Explore Nature</h3>
+            <p>Travel with us and see nature at its finest.</p>
+          </div>
+          <div class="w3-row-padding">
+            <div class="w3-half w3-margin-bottom">
+              <img src="/w3images/ocean2.jpg" alt="Norway" style="width:100%">
+              <div class="w3-container w3-white">
+                <h3>West Coast, Norway</h3>
+                <p class="w3-opacity">Roundtrip from $79</p>
+                <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <button class="w3-button w3-margin-bottom">Buy Tickets</button>
+              </div>
+            </div>
+            <div class="w3-half w3-margin-bottom">
+              <img src="/w3images/mountains2.jpg" alt="Austria" style="width:100%">
+              <div class="w3-container w3-white">
+                <h3>Mountains, Austria</h3>
+                <p class="w3-opacity">One-way from $39</p>
+                <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                <button class="w3-button w3-margin-bottom">Buy Tickets</button>
+              </div>
+            </div>
+          </div>
+        
+          <!-- Newsletter -->
+          <div class="w3-container">
+            <div class="w3-panel w3-padding-16 w3-black w3-opacity w3-card w3-hover-opacity-off">
+              <h2>Get the best offers first!</h2>
+              <p>Join our newsletter.</p>
+              <label>E-mail</label>
+              <input class="w3-input w3-border" type="text" placeholder="Your Email address">
+              <button type="button" class="w3-button w3-red w3-margin-top">Subscribe</button>
+            </div>
+          </div>
+          
+          <!-- Contact -->
+          <div class="w3-container">
+            <h2>Contact</h2>
+            <p>Let us book your next trip!</p>
+            <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
+            <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
+            <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+            <form action="/action_page.php" target="_blank">
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
+              <p><button class="w3-button w3-black w3-padding-large" type="submit">SEND MESSAGE</button></p>
+            </form>
+          </div>
+          
+        <!-- End page content -->
+        </div>
+        
+        <!-- Footer -->
+        <footer class="w3-container w3-center w3-opacity w3-margin-bottom">
+          <h5>Find Us On</h5>
+          <div class="w3-xlarge w3-padding-16">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
+          </div>
+          <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+        </footer>
+        
+        <script>
+        // Tabs
+        function openLink(evt, linkName) {
+          var i, x, tablinks;
+          x = document.getElementsByClassName("myLink");
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+          }
+          tablinks = document.getElementsByClassName("tablink");
+          for (i = 0; i < x.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
+          }
+          document.getElementById(linkName).style.display = "block";
+          evt.currentTarget.className += " w3-red";
+        }
+        
+        // Click on the first tablink on load
+        document.getElementsByClassName("tablink")[0].click();
+        </script>
 </body>
 
 </html>
