Home template has been implemented

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 
 <!-- Navigation Bar -->
-<div class="w3-bar w3-white w3-large">
+<div class="w3-bar w3-white w3-large card">
     <a href="/" class="w3-bar-item w3-button w3-red w3-mobile"><i class="fa fa-bed w3-margin-right"></i>Tribook</a>
     <a href="#about" class="w3-bar-item w3-button w3-mobile">Sobre nosotros</a>
     <a href="#contact" class="w3-bar-item w3-button w3-mobile">Contacto</a>
