--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
+.myLink {display: none}
+
 /* Estilos generales para la grid */
 .grid {
     display: grid;
