New apartment styles have been added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
     </section>
     <form class="w3-row-padding card" style="padding-top: 10px;" action="/search" method="GET">
         <div class="w3-col m2">
-            <label for="city"><i class="fa-location-dot"></i> Ciudad</label>
+            <label for="city"><i class="fa fa-map-marker"></i> Ciudad</label>
             <input class="w3-input w3-border" type="text" placeholder="Ciudad" name="city" id="city" required maxlength="30">
             </div>
             <div class="w3-col m2">
@@ -36,7 +36,7 @@
             </select>
             </div>
             <div class="w3-col m2">
-                <label for="max-price"><i class="fa fa-male"></i> Precio noche</label>
+                <label for="max-price"><i class="fa fa-eur"></i> Precio noche</label>
                 <input class="w3-input w3-border" type="number" placeholder="15€" name="max-price" id="max-price" required min="0">
             </div>
             <div class="w3-col m2">
