--- a/views/new-apartment.ejs
+++ b/views/new-apartment.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>New-Apartment</title>
+    <title><%= apartment._id? 'Editar' : 'Añadir Nuevo' %> Apartamento</title>
     <meta charset="UTF-8">
     <%- include('./partials/head.ejs') %>
 </head>
@@ -11,21 +11,21 @@
     <header class="container-fluid"></header>
         <%- include('./partials/header.ejs') %>
     </header>
-    <h1><%= apartment._id? 'Edit' : 'Add New' %> Apartment</h1>
+    <h1 style="padding: 20px;"><%= apartment._id? 'Editar' : 'Añadir Nuevo' %> Apartamento</h1>
     <form class="container" action="/admin/apartment/new-apartment" method="POST">
         <input type="hidden" name="id" id="id" value="<%= apartment._id %>">
-        <div>
-            <label>
-                <input type="checkbox" name="isAvailable" id="isAvailable" value="true"  <%= typeof apartment.isAvailable === 'undefined' || apartment.isAvailable ? 'checked' : '' %>>
-                Apartamento disponible
-            </label>
-            <p class="advisement pico-color-azure-500">Si desmarcas la casilla, el apartamento no estará disponible, no podrá visualizarse en la página principal para reservar ni podrá ser editado, pero puedes reactivartivarlo en el momento que lo desees contactando previamente con soporte.</p>
-        </div>
         <label for="title">Título</label>
         <input type="text" name="title" id="title" required maxlength="30" value="<%= apartment.title %>">
         <label for="description">Descripción</label>
         <textarea rows="5" name="description" id="description" required><%= apartment.description %></textarea>
-        <fieldset class="container">
+        <div style="padding-top: 20px;">
+            <label>
+                <input type="checkbox" name="isAvailable" id="isAvailable" value="true"  <%= typeof apartment.isAvailable === 'undefined' || apartment.isAvailable ? 'checked' : '' %>>
+                Apartamento disponible
+            </label>
+            <p class="advisement pico-color-azure-500">Si desmarcas esta casilla, el apartamento no estará disponible, no podrá visualizarse en la página principal para reservar ni podrá ser editado, pero puedes reactivartivarlo en el momento que lo desees contactando previamente con soporte.</p>
+        </div>
+        <section class="container" style="padding-top: 10px;">
             <h4>Ubicación</h4>
             <div class="grid">
                 <div>
@@ -41,10 +41,10 @@
                     <input type="number" step="any" name="longitude" id="longitude"  min="0" value="<%= apartment.location && apartment.location.coordinates.longitude ? apartment.location.coordinates.longitude : '' %>">
                 </div>
             </div>
-        </fieldset>
+        </section>
         <label for="rules">Normas</label>
         <textarea rows="5" name="rules" id="rules" required><%= apartment.rules %></textarea>
-        <label for="rooms">Habitaciones</label>
+        <label for="rooms" style="padding-top: 20px;">Habitaciones</label>
         <input type="number" name="rooms" id="rooms" required min="0" value="<%= apartment.rooms %>">
         <label for="beds">Camas</label>
         <input type="number" name="beds" id="beds" required min="0" value="<%= apartment.beds %>">
@@ -61,7 +61,7 @@
             <option value="three-persons" name="three-persons-capacity" <%= apartment.capacity == "three-persons" ? 'selected' : '' %>>3 personas</option>
             <option value="four-persons" name="four-persons-capacity" <%= apartment.capacity == "four-persons" ? 'selected' : '' %>>4 personas</option>
         </select>
-        <fieldset class="services-container">
+        <section class="services-container" style="padding-top: 20px;">
             <h4>Servicios</h4>
             <div>
                 <label>
@@ -99,8 +99,8 @@
                     Cocina
                 </label>
             </div>
-        </fieldset>
-        <fieldset class="photos-container"></fieldset>
+        </section>
+        <section class="photos-container" style="padding-top:10px">
             <h4>Fotografías del Apartamento (máximo 4)</h4>
             <div>
                 <legend class="pico-color-azure-500">Fotografía principal</legend>
@@ -143,10 +143,10 @@
                 <input type="text" name="descriptionPhoto4" id="descriptionPhoto4" maxlength="50"
                 value="<%= apartment && apartment.photos && apartment.photos[3] && apartment.photos[3].descriptionPhoto ? apartment.photos[3].descriptionPhoto : '' %>">
             </div>
-        </fieldset>
+        </section>
         
         
-        <input type="submit" value="<%= apartment._id ? 'Guardar cambios' : 'Añadir apartamento' %>">
+        <input class="w3-button w3-block w3-black" type="submit" value="<%= apartment._id ? 'Guardar cambios' : 'Añadir apartamento' %>">
     </form>
 </body>
 
