New-booking view styles have been added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,7 +77,7 @@
           </div>
         </footer>
         
-        <script>
+        <!-- <script>
         // Tabs
         function openLink(evt, linkName) {
           var i, x, tablinks;
@@ -95,7 +95,7 @@
         
         // Click on the first tablink on load
         document.getElementsByClassName("tablink")[0].click();
-        </script>
+        </script> -->
 </body>
 
 </html>
